[package]
name = "thud-web"
version = "0.1.0"
authors = ["Laura Demkowicz-Duffy <edward70891@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.51"
rocket = "0.4.4"

[dependencies.thud]
version = "0.1.6"
features = ["serialize"]

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.106"
features = ["derive"]
